USB Receiver deleted

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -37,16 +37,16 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <receiver
-            android:name="com.sersoluciones.flutter_pos_printer_platform.usb.UsbReceiver"
-            android:exported="false">
+<!--        <receiver-->
+<!--            android:name="com.sersoluciones.flutter_pos_printer_platform.usb.UsbReceiver"-->
+<!--            android:exported="false">-->
 
-            <intent-filter>
-                <action android:name="android.hardware.usb.action.ACTION_USB_PERMISSION" />
-                <action android:name="android.hardware.usb.action.USB_DEVICE_DETACHED" />
-                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
-                <action android:name="com.flutter_pos_printer.USB_PERMISSION" />
-            </intent-filter>
-        </receiver>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.hardware.usb.action.ACTION_USB_PERMISSION" />-->
+<!--                <action android:name="android.hardware.usb.action.USB_DEVICE_DETACHED" />-->
+<!--                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />-->
+<!--                <action android:name="com.flutter_pos_printer.USB_PERMISSION" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
     </application>
 </manifest>
