--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
   # flutter_star_prnt: ^2.3.6
   enum_to_string: ^2.0.1
-  image_v3: ^3.3.0
+  image: ^4.5.4
   network_info_plus: ^7.0.0
   ping_discover_network_forked: ^0.0.1
   rxdart: ^0.27.7
